
Thu Aug 31 16:07:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_acl.c, kadm5_defs.h - Change operation of acl_op_permitted().  It
		now takes another argument which is the name of the target of
		the operation.  This allows finer granularity of control over
		administrative operations for clients.
	* srv_acl.c - Change SIGALRM to SIGHUP under POSIX_SIGNALS.  We want
		SIGHUP to reread the ACL file.
	* admin.c, passwd.c - Conform to new ACL operations.
	* kadmind5.M - Change description of ACL file.


Fri Aug 25 17:40:52 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_key.c - Fix automatic generation of changepw service which got
		screwed up when the database changes went in.


Thu Aug 17 13:50:28 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_key.c, kadm5_defs.h - Add key_{open,close}_db().  Close database
		after initialization.
	* proto_serv.c - Open the database after reading a command and close
		it before sending a response.


Tue Aug 15 14:28:03 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadm5_defs.h, admin.c, passwd.c, srv_key.c - Replace key_name_to_data
		with krb5_dbe_find_keytype().


Thu Aug 10 14:34:31 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_key.c - Consolidate handling of tagged database attributes here
		in key_update_tl_attrs().  Fix a bug which was never encountered
	* kadm5_defs.h - Add prototype for key_update_tl_attrs().
	* admin.c, passwd.c - Use key_update_tl_attrs() where appropriate.


Wed Aug 9 17:09:35 EDT 1995	Paul Park	(pjpark@mit.edu)
	* admin.c - Add code to use kdb5's change-password interfaces under
		USE_KDB5_CPW for now until it's fully shaken out.
		- Fix a memory leak in admin_add_modify.
		- Handle null return from krb5_dbe_decode_mod_princ_data().
	* passwd.c - Add code to use kdb5's change-password interfaces under
		USE_KDB5_CPW for now until it's fully shaken out.
		- Fix a memory leak in passwd_check_opass_ok()
	* proto_serv.c - Use krb5_auth_context_free() to free the auth_context
		instead of krb5_xfree().